--- a/centroverde.html
+++ b/centroverde.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <header>
-      <img src="http://carlitos.com.ar/DGREC/image/SED.png" alt="logo">
-      <img class = "logoCV" src="http://carlitos.com.ar/DGREC/image/ciudadverdeGocad.png" alt="Logo de la dirección">
+      <img src="http://carlitos.com.ar/DGREC/image/SED.png" alt="logo" onMouseOver="hacerHover('SED',this,'on')" onMouseOut="hacerHover('SED',this,'')">
+      <img class = "logoCV" src="http://carlitos.com.ar/DGREC/image/LEYENDA.png" alt="Logo de la dirección">
     </header>
 <!-- Parte para poder logger -->
   <div id="ingreso-principal" class ="ingreso contenedor contenedorIngreso">
